compiler-core/src/parse/snapshots/gleam_core__parse__tests__capture_with_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic fn main() {\n  add(_name, 1)\n}\n\nfn add(x, y) {\n  x + y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

public fn main() {
  add(_name, 1)
}

fn add(x, y) {
  x + y
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:7
  │
3 │   add(_name, 1)
  │       ^^^^^ I was not expecting this

Found a name, expected one of: 
- An expression
- An underscore
