compiler-core/src/parse/snapshots/gleam_core__parse__tests__external_attribute_with_custom_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"gleam_stdlib\", \"dict\")\n@external(javascript, \"./gleam_stdlib.d.ts\", \"Dict\")\npublic type Dict(key, value)\n"
snapshot_kind: text
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: CustomType(
                    CustomType {
                        location: SrcSpan {
                            start: 96,
                            end: 124,
                        },
                        end_position: 124,
                        name: "Dict",
                        name_location: SrcSpan {
                            start: 108,
                            end: 112,
                        },
                        publicity: Public,
                        constructors: [],
                        documentation: None,
                        deprecation: NotDeprecated,
                        opaque: false,
                        parameters: [
                            (
                                SrcSpan {
                                    start: 113,
                                    end: 116,
                                },
                                "key",
                            ),
                            (
                                SrcSpan {
                                    start: 118,
                                    end: 123,
                                },
                                "value",
                            ),
                        ],
                        typed_parameters: [],
                        external_erlang: Some(
                            (
                                "gleam_stdlib",
                                "dict",
                                SrcSpan {
                                    start: 1,
                                    end: 42,
                                },
                            ),
                        ),
                        external_javascript: Some(
                            (
                                "./gleam_stdlib.d.ts",
                                "Dict",
                                SrcSpan {
                                    start: 43,
                                    end: 95,
                                },
                            ),
                        ),
                    },
                ),
                target: None,
            },
        ],
        names: Names {
            local_types: {},
            imported_modules: {},
            type_variables: {},
            local_value_constructors: {},
            reexport_aliases: {},
        },
        unused_definition_positions: {},
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            42,
            95,
            124,
        ],
        trailing_commas: [],
    },
}
