compiler-core/src/parse/snapshots/gleam_core__parse__tests__if_like_expression.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic fn main() {\n  let a = if wibble {\n    wobble\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

public fn main() {
  let a = if wibble {
    wobble
  }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:11
  │
3 │   let a = if wibble {
  │           ^^ Gleam doesn't have if expressions

If you want to write a conditional expression you can use a `case`:

    case condition {
      True -> todo
      False -> todo
    }

See: https://tour.gleam.run/flow-control/case-expressions/
