compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_label_shorthand_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic fn main() {\n  wibble(:,)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

public fn main() {
  wibble(:,)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:10
  │
3 │   wibble(:,)
  │          ^ I was not expecting this

Found `:`, expected one of: 
- `)`
