compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_pattern_label_shorthand_5.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic fn main() {\n  let Wibble(arg1: arg2:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

public fn main() {
  let Wibble(arg1: arg2:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:24
  │
3 │   let Wibble(arg1: arg2:) = todo
  │                        ^ I was not expecting this

Found `:`, expected one of: 
- `)`
